--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,22 +1,15 @@
 @font-face {
   font-family: 'airstreamregular';
   src: url('fonts/Airstream-webfont.eot');
-  src: url('fonts/Airstream-webfont.eot?iefix') format('embedded-opentype'),
-       url('fonts/Airstream-webfont.woff') format('woff'),
-       url('fonts/Airstream-webfont.ttf') format('truetype'),
-       url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
+  src: url('fonts/Airstream-webfont.eot?iefix') format('embedded-opentype'), url('fonts/Airstream-webfont.woff') format('woff'), url('fonts/Airstream-webfont.ttf') format('truetype'), url('fonts/Airstream-webfont.svg#airstreamregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-
 @font-face {
   font-family: 'lakeshore';
   src: url('fonts/LAKESHOR-webfont.eot');
-  src: url('fonts/LAKESHOR-webfont.eot?iefix') format('embedded-topentype'),
-       url('fonts/LAKESHOR-webfont.woff') format('woff'),
-       url('fonts/LAKESHOR-webfont.ttf') format('truetype'),
-       url('fonts/LAKESHOR-webfont.svg#lakeshore') format('svg');
+  src: url('fonts/LAKESHOR-webfont.eot?iefix') format('embedded-topentype'), url('fonts/LAKESHOR-webfont.woff') format('woff'), url('fonts/LAKESHOR-webfont.ttf') format('truetype'), url('fonts/LAKESHOR-webfont.svg#lakeshore') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,11 +18,9 @@ html, body {
   height: 100%;
 }
 
-
 body {
   display: flex;
   flex-direction: column;
-
   font-size: 10px;
   background: rgb(149, 194, 215);
 }
@@ -42,9 +33,8 @@ a {
   flex: 0 1 auto;
 }
 
-.logo-text{
+.logo-text {
   background: white;
-
   text-align: center;
   text-transform: uppercase;
   font-family: lakeshore;
@@ -56,7 +46,6 @@ a {
   display: flex;
   flex-direction: column;
 }
-
 
 .thumbnail-item {
   display: inline-block;
@@ -73,7 +62,6 @@ a {
   justify-content: space-between;
   list-style: none;
   padding: 0;
-
   white-space: nowrap;
   overflow-x: auto;
 }
@@ -87,11 +75,9 @@ a {
   display: block;
   margin: 0;
   padding: 4px 10px;
-
   background: rgb(96, 125, 139);
   color: rgb(202, 238, 255);
-
-font-size: 18px;
+  font-size: 18px;
 }
 
 .detail-image-container {
@@ -114,7 +100,6 @@ font-size: 18px;
   position: absolute;
   bottom: -16px;
   left: 4px;
-
   font-family: airstreamregular;
   color: white;
   text-shadow: rgba(0, 0, 0, 0.9) 1px 2px 9px;
